--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,99 @@
-.App {
-  text-align: center;
+*{
+  margin: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body{
+background-color: #000000;
+
+
+
+}
+h1{
+  color: aliceblue;
+}
+h4{
+  color: aliceblue;
+}
+a{
+  color: aliceblue;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.app{
+display: flex;
+justify-content: space-evenly;
+padding: 20px;
+background-color: #000000 ;
+}
+.app__header >h1 {
+color: #fc3c3c;
+
+}
+.app__header {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+  justify-content: space-between;
+  background-color: #303030;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app__left{
+
+  flex: 0.9;
+  background-color: #212121;
+}
+.app_right__card{
+
+background-color: #212121;
+color: rgb(255, 255, 255);
+  
+}
+
+.app__status{
+
+  display: flex;
+  justify-content: space-between;
+  
+}
+.select{
+  background-color: #c7c7c7;
+  
+}
+.app_right{
+
+  
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+     
+   }
+   .app_right .MuiCardContent-root {
+ 
+    
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+       
+     }
+ 
+  
+.app__graph{
+  flex-grow: 2;
+ height: 200px;
 }
+.app__grpTitle{
+margin-top: 20px;
+margin-bottom: 20px;
 
-.App-link {
-  color: #61dafb;
 }
+@media (max-width:900px){
+  .app{
+    flex-direction: column;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
   }
-  to {
-    transform: rotate(360deg);
+  .infoBox__cases{
+    font-size: 20px;
+  }
+  .infobox__total{
+    font-size: 10px;
+    
   }
 }
